--- a/siddhartha/jungle/jungle.html
+++ b/siddhartha/jungle/jungle.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Dou Shou Qi</title>
-	<p id="multiplayer_join_url"></p>
-	<script src="jungle.js"></script>
-	<script src="info.js"></script>
-
-</head>
-
-<body>
-	<canvas id="drawingCanvas" width="1800"
-	 height="1400"></canvas>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>
+			Dou Shou Qi
+		</title>
+	</head>
+	<body>
+		<p id="multiplayer_join_url"></p>
+		<div id="container"></div>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script> 
+		<body onresize="draw()">
+		<script src="jungle.js"></script> 
+		<script src="info.js"></script>
+	</body>
 </html>
