Load Raphael over HTTPS

--- a/siddhartha/jungle/jungle.html
+++ b/siddhartha/jungle/jungle.html
@@ -9,7 +9,7 @@
 	<body>
 		<p id="multiplayer_join_url"></p>
 		<div id="container"></div>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script> 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script> 
 		<body onresize="draw()">
 		<script src="jungle.js"></script> 
 		<script src="info.js"></script>
