--- a/siddhartha/ttt/index.html
+++ b/siddhartha/ttt/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
+    <!-- IDE will recognize these as library imports -->
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -10,6 +11,7 @@
 </head>
 <body class="bg-gray-50">
     <div id="root"></div>
+    <!-- type="text/babel" tells IntelliJ this is JSX code -->
     <script type="text/babel" src="TicTacToe.js"></script>
     <script type="text/babel">
         // Render the app
