--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -53,135 +53,6 @@
 </head>
 <body>
     <div id="root"></div>
-
-    <script type="text/babel">
-        // Constants for click areas
-        const DRAWING_WIDTH = 100;
-        const DRAWING_HEIGHT = 67;
-        const HOME_LOCAL_X_START = 4;
-        const HOME_LOCAL_X_END = 37;
-        const HOME_LOCAL_Y_START = 13;
-        const HOME_LOCAL_Y_END = 29;
-        const HOME_RULES_X_START = 62;
-        const HOME_RULES_X_END = 95;
-        const HOME_RULES_Y_START = 23;
-        const HOME_RULES_Y_END = 38;
-        const BACK_X_START = 3;
-        const BACK_X_END = 20;
-        const BACK_Y_START = 2;
-        const BACK_Y_END = 13;
-        const NEXT_X_START = 80;
-        const NEXT_X_END = 100;
-        const NEXT_Y_START = 0;
-        const NEXT_Y_END = 10;
-
-        const ruleScreens = [
-            'agilityrules',
-            'eatinganimals',
-            'howtowin',
-            'jumpingoverwater',
-            'ratsarespecial',
-            'traps'
-        ];
-
-        const HomeMenu = () => (
-            <svg viewBox="0 0 100 67">
-                <rect width="100" height="67" fill="#87CEEB"/>
-                <text x="50" y="12" fill="black" fontSize="9" fontFamily="Impact, Arial Black, sans-serif" textAnchor="middle">
-                    Dou Shou Qi
-                </text>
-                <g transform="translate(4, 13)">
-                    <rect width="33" height="16" rx="2" fill="white" stroke="black" strokeWidth="0.5"/>
-                    <text x="16.5" y="11" fill="black" fontSize="7" fontFamily="Impact, Arial Black, sans-serif" textAnchor="middle">
-                        Local
-                    </text>
-                </g>
-                <g transform="translate(62, 23)">
-                    <rect width="33" height="15" rx="2" fill="white" stroke="black" strokeWidth="0.5"/>
-                    <text x="16.5" y="10" fill="black" fontSize="7" fontFamily="Impact, Arial Black, sans-serif" textAnchor="middle">
-                        Rules
-                    </text>
-                </g>
-            </svg>
-        );
-
-        function JungleGame() {
-            const [currentWindow, setCurrentWindow] = React.useState('home');
-            const contentRef = React.useRef(null);
-
-            const handleClick = (e) => {
-                if (!contentRef.current) return;
-                
-                const rect = contentRef.current.getBoundingClientRect();
-                const clickX = (e.clientX - rect.left) * DRAWING_WIDTH / rect.width;
-                const clickY = (e.clientY - rect.top) * DRAWING_HEIGHT / rect.height;
-
-                console.log('Click coordinates:', clickX, clickY);
-
-                if (currentWindow === 'home') {
-                    if (clickX > HOME_LOCAL_X_START && 
-                        clickX < HOME_LOCAL_X_END &&
-                        clickY > HOME_LOCAL_Y_START && 
-                        clickY < HOME_LOCAL_Y_END) {
-                        setCurrentWindow('game');
-                    }
-                    else if (clickX > HOME_RULES_X_START &&
-                        clickX < HOME_RULES_X_END &&
-                        clickY > HOME_RULES_Y_START &&
-                        clickY < HOME_RULES_Y_END) {
-                        setCurrentWindow('agilityrules');
-                    }
-                }
-                else if (ruleScreens.includes(currentWindow)) {
-                    // Back button
-                    if (clickX > BACK_X_START &&
-                        clickX < BACK_X_END &&
-                        clickY > BACK_Y_START &&
-                        clickY < BACK_Y_END) {
-                        setCurrentWindow('home');
-                    }
-                    // Next button
-                    else if (currentWindow !== 'traps' &&
-                        clickX > NEXT_X_START &&
-                        clickX < NEXT_X_END &&
-                        clickY > NEXT_Y_START &&
-                        clickY < NEXT_Y_END) {
-                        const currentIndex = ruleScreens.indexOf(currentWindow);
-                        setCurrentWindow(ruleScreens[currentIndex + 1]);
-                    }
-                }
-            };
-
-            return (
-                <div className="game-container">
-                    <div 
-                        ref={contentRef}
-                        className="game-content"
-                        onClick={handleClick}
-                    >
-                        {currentWindow === 'home' && <HomeMenu />}
-                        {ruleScreens.includes(currentWindow) && (
-                            <img 
-                                src={`images/${currentWindow}.png`}
-                                alt={`${currentWindow} rules`}
-                            />
-                        )}
-                        {currentWindow === 'game' && (
-                            <div style={{color: 'white', padding: '20px'}}>
-                                Game Board (Coming Soon)
-                                <br />
-                                <button onClick={() => setCurrentWindow('home')}>
-                                    Back to Home
-                                </button>
-                            </div>
-                        )}
-                    </div>
-                </div>
-            );
-        }
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<JungleGame />);
-    </script>
+    <script type="text/babel" src="game.js"></script>
 </body>
 </html>
