--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -4,49 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jungle Game</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-        #root {
-            width: 100%;
-            height: 100%;
-        }
-        .game-container {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .game-content {
-            position: relative;
-            aspect-ratio: 100/67;
-            max-width: 100%;
-            max-height: 100%;
-        }
-        @media (min-aspect-ratio: 100/67) {
-            .game-content {
-                height: 100%;
-                width: auto;
-            }
-        }
-        @media (max-aspect-ratio: 100/67) {
-            .game-content {
-                width: 100%;
-                height: auto;
-            }
-        }
-        .game-content svg, .game-content img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
