--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-<p>
-<font size="50" face="arial" color="red">
-<a href="siddhartha/jungle/jungle.html">Jungle Chess by Siddhartha Biswas</a>
-</font>
-</p>
+<header class="title">
+  <h1>
+    <a href="siddhartha/jungle/" class="title-link">
+      Dou Shou Qi by Siddhartha Biswas
+    </a>
+  </h1>
+</header>
+
+<style>
+.title {
+  text-align: center;
+}
+
+.title-link {
+  color: #ff0000;
+  font-family: Arial, sans-serif;
+  font-size: 2.5rem;
+  text-decoration: none;
+}
+
+.title-link:hover {
+  text-decoration: underline;
+}
+</style>
