refactor: move game constants and utilities to separate file for better organization

--- a/rohan/panda/index.html
+++ b/rohan/panda/index.html
@@ -10,10 +10,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div id="root"></div>
-    <script type="text/babel" src="app.js"></script>
-    <script type="text/babel">
-        ReactDOM.render(<PlatformGame />, document.getElementById('root'));
-    </script>
+<div id="root"></div>
+<script type="text/babel" src="game_utils.js"></script>
+<script type="text/babel" src="app.js"></script>
+<script type="text/babel">
+   ReactDOM.render(<PlatformGame />, document.getElementById('root'));
+</script>
 </body>
 </html>
