Refactor: Extract game loop logic into separate module

--- a/rohan/panda/index.html
+++ b/rohan/panda/index.html
@@ -12,6 +12,7 @@
 <body>
 <div id="root"></div>
 <script type="text/babel" src="game_utils.js"></script>
+<script type="text/babel" src="game_loop.js"></script>
 <script type="text/babel" src="game_logic.js"></script>
 <script type="text/babel" src="app.js"></script>
 <script type="text/babel">
