--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Dou Shou Qi - The Animal Chess Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="game.js"></script>
+<script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script src="game_logic.js"></script>
+<script src="home_menu.js"></script>
+<script src="game_board.js"></script>
+<script src="game.js"></script>
 </body>
 </html>
