--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -10,9 +10,11 @@
 <div id="root"></div>
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script src="constants.js"></script>
 <script src="game_logic.js"></script>
 <script src="home_menu.js"></script>
 <script src="game_board.js"></script>
+<script src="game_manager.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
