--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -13,6 +13,7 @@
 <script src="constants.js"></script>
 <script src="game_logic.js"></script>
 <script src="home_menu.js"></script>
+<script src="board_renderer.js"></script>
 <script src="game_board.js"></script>
 <script src="game_manager.js"></script>
 <script src="game.js"></script>
