Refactor: Move game setup constants and initial pieces to separate file

--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -11,6 +11,7 @@
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="constants.js"></script>
+<script src="game_setup.js"></script>
 <script src="game_logic.js"></script>
 <script src="home_menu.js"></script>
 <script src="board_renderer.js"></script>
