--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -16,6 +16,7 @@
 <script src="home_menu.js"></script>
 <script src="board_renderer.js"></script>
 <script src="game_board.js"></script>
+<script src="navigation_manager.js"></script>
 <script src="game_manager.js"></script>
 <script src="game.js"></script>
 </body>
