--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -17,6 +17,7 @@
 <script src="board_renderer.js"></script>
 <script src="game_board.js"></script>
 <script src="navigation_manager.js"></script>
+<script src="victory_screen.js"></script>
 <script src="game_manager.js"></script>
 <script src="game.js"></script>
 </body>
