refactor: Move win condition logic to separate file

--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -13,6 +13,7 @@
 <script src="constants.js"></script>
 <script src="game_setup.js"></script>
 <script src="game_logic.js"></script>
+<script src="win_conditions.js"></script>
 <script src="home_menu.js"></script>
 <script src="board_renderer.js"></script>
 <script src="game_board.js"></script>
