--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -20,6 +20,7 @@
 <script src="navigation_manager.js"></script>
 <script src="victory_screen.js"></script>
 <script src="game_manager.js"></script>
+<script src="ai_player.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
