--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -12,7 +12,8 @@
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="constants.js"></script>
 <script src="game_setup.js"></script>
-<script src="game_logic.js"></script>
+<script src="move_validation.js"></script>
+<script src="special_moves.js"></script>
 <script src="win_conditions.js"></script>
 <script src="home_menu.js"></script>
 <script src="board_renderer.js"></script>
