Add trap square capture validation and debug overlay system

--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -18,6 +18,7 @@
 <script src="win_conditions.js"></script>
 <script src="home_menu.js"></script>
 <script src="board_renderer.js"></script>
+<script src="debug_overlay.js"></script>
 <script src="game_board.js"></script>
 <script src="navigation_manager.js"></script>
 <script src="victory_screen.js"></script>
