Add position evaluation test support to test framework

--- a/siddhartha/jungle/tests.html
+++ b/siddhartha/jungle/tests.html
@@ -32,6 +32,7 @@
     <script src="move_validation.js"></script>
     <script src="water_rules.js"></script>
     <script src="piece_moves.js"></script>
+    <script src="position_evaluator.js"></script>
     <script src="test_framework.js"></script>
     <script src="move_validation_tests.js"></script>
 </body>
