--- a/siddhartha/jungle/tests.html
+++ b/siddhartha/jungle/tests.html
@@ -29,6 +29,7 @@
     <script src="board_constants.js"></script>
     <script src="ui_constants.js"></script>
     <script src="game_setup.js"></script>
+    <script src="win_conditions.js"></script>
     <script src="move_validation.js"></script>
     <script src="water_rules.js"></script>
     <script src="piece_moves.js"></script>
