--- a/siddhartha/jungle/tests.html
+++ b/siddhartha/jungle/tests.html
@@ -5,22 +5,196 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Chess Tests</title>
     <style>
-        .pass { color: green; }
-        .fail { color: red; }
-        .suite { margin-left: 20px; }
+        :root {
+            --bauhaus-red: #E63946;
+            --bauhaus-yellow: #F7B538;
+            --bauhaus-blue: #1D3557;
+            --bauhaus-light-blue: #457B9D;
+            --bauhaus-cream: #F1FAEE;
+            --bauhaus-gray: #2F3542;
+            --bauhaus-light-gray: #ABB2BF;
+            --status-pass: #06D6A0;
+            --status-fail: #E63946;
+        }
+
+        body {
+            background-color: var(--bauhaus-cream);
+            color: var(--bauhaus-gray);
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+        }
+
+        .suite { 
+            margin-left: 20px;
+            margin-bottom: 30px;
+        }
+
+        .suite h2 {
+            cursor: pointer;
+            user-select: none;
+            padding: 8px 15px;
+            border-radius: 0;
+            transition: all 0.2s;
+            background-color: var(--bauhaus-blue);
+            color: var(--bauhaus-cream);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
+            border-left: 5px solid var(--bauhaus-yellow);
+        }
+
+        .suite h2:hover {
+            background-color: var(--bauhaus-light-blue);
+            transform: translateX(2px);
+        }
+
+        .suite h2:before {
+            content: '▼';
+            display: inline-block;
+            margin-right: 10px;
+            color: var(--bauhaus-yellow);
+            transition: transform 0.2s;
+        }
+
+        .suite.collapsed h2:before {
+            transform: rotate(-90deg);
+        }
+
+        .suite.collapsed .test {
+            display: none;
+        }
+
         .test { 
             margin-left: 40px; 
             margin-bottom: 20px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+            padding: 15px;
+            background-color: white;
+            border: none;
+            border-left: 4px solid var(--bauhaus-light-gray);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: all 0.2s;
         }
-        .setup {
-            background: #f5f5f5;
-            padding: 10px;
+
+        .test.pass {
+            border-left-color: var(--status-pass);
+        }
+
+        .test.fail {
+            border-left-color: var(--status-fail);
+        }
+
+        .test:hover {
+            transform: translateX(2px);
+            box-shadow: 2px 4px 8px rgba(0,0,0,0.15);
+        }
+
+        .test-header {
+            cursor: pointer;
+            user-select: none;
             margin-bottom: 10px;
-            border-radius: 3px;
-            font-family: monospace;
+            padding: 8px 12px;
+            border-radius: 0;
+            font-weight: 500;
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+        }
+
+        .test-header:before {
+            content: '▼';
+            display: inline-block;
+            margin-right: 8px;
+            font-size: 0.8em;
+            transition: transform 0.2s;
+        }
+
+        .test.pass .test-header:before {
+            color: var(--status-pass);
+        }
+
+        .test.fail .test-header:before {
+            color: var(--status-fail);
+        }
+
+        .test.collapsed .test-header:before {
+            transform: rotate(-90deg);
+        }
+
+        .test.collapsed .setup,
+        .test.collapsed p {
+            display: none;
+        }
+
+        .setup {
+            background-color: var(--bauhaus-cream);
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 0;
+            font-family: 'Courier New', monospace;
+        }
+
+        .setup pre {
+            max-height: 300px;
+            overflow-y: auto;
+            padding: 10px;
+            background-color: white;
+            border-left: 3px solid var(--bauhaus-yellow);
+        }
+
+        .pass { 
+            color: var(--status-pass);
+            font-weight: 500;
+        }
+
+        .fail { 
+            color: var(--status-fail);
+            font-weight: 500;
+        }
+
+        .suite .summary {
+            font-size: 0.9em;
+            margin-left: 15px;
+            color: var(--bauhaus-cream);
+            padding: 2px 8px;
+            border-radius: 0;
+            background-color: rgba(255,255,255,0.1);
+        }
+
+        .suite .summary .pass-count {
+            color: var(--status-pass);
+        }
+
+        .suite .summary .fail-count {
+            color: var(--bauhaus-red);
+        }
+
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: var(--bauhaus-cream);
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: var(--bauhaus-light-blue);
+            border: 2px solid var(--bauhaus-cream);
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: var(--bauhaus-blue);
+        }
+
+        #testResults:before {
+            content: 'TEST RESULTS';
+            display: block;
+            font-size: 2em;
+            font-weight: bold;
+            text-transform: uppercase;
+            color: var(--bauhaus-blue);
+            padding: 20px;
+            margin-bottom: 20px;
+            border-left: 8px solid var(--bauhaus-yellow);
+            letter-spacing: 2px;
         }
     </style>
 </head>
