Split test_framework.js into test_core.js and test_runner.js

--- a/siddhartha/jungle/tests.html
+++ b/siddhartha/jungle/tests.html
@@ -17,7 +17,8 @@
     <script src="water_rules.js"></script>
     <script src="piece_moves.js"></script>
     <script src="position_evaluator.js"></script>
-    <script src="test_framework.js"></script>
+    <script src="test_core.js"></script>
+    <script src="test_runner.js"></script>
     <script src="move_validation_tests.js"></script>
 </body>
 </html>
