--- a/siddhartha/jungle/tests.html
+++ b/siddhartha/jungle/tests.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Chess Tests</title>
     <link href="tests_layout.css" rel="stylesheet">
+    <link href="tests_variables.css" rel="stylesheet">
     <link href="tests_theme.css" rel="stylesheet">
 </head>
 <body>
