--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -25,6 +25,7 @@
 <script src="victory_screen.js"></script>
 <script src="game_manager.js"></script>
 <script src="position_evaluator.js"></script>
+<script src="minimax_engine.js"></script>
 <script src="ai_player.js"></script>
 <script src="game.js"></script>
 </body>
