--- a/siddhartha/jungle/tests.html
+++ b/siddhartha/jungle/tests.html
@@ -18,6 +18,8 @@
     <script src="water_rules.js"></script>
     <script src="piece_moves.js"></script>
     <script src="position_evaluator.js"></script>
+    <script src="minimax_engine.js"></script>
+    <script src="ai_player.js"></script>
     <script src="test_core.js"></script>
     <script src="test_runner.js"></script>
     <script src="move_validation_tests.js"></script>
