--- a/siddhartha/grades/index.html
+++ b/siddhartha/grades/index.html
@@ -20,6 +20,7 @@
 <script src="grade_calculations.js"></script>
 <script src="utils.js"></script>
 <script src="assignment_row.js"></script>
+<script src="hypothetical_assignment_row.js"></script>
 <script src="category_header.js"></script>
 <script src="category_section.js"></script>
 <script src="course_detail.js"></script>
