Add final exam score calculator and required grade display

--- a/siddhartha/grades/index.html
+++ b/siddhartha/grades/index.html
@@ -23,6 +23,7 @@
 <script src="hypothetical_assignment_row.js"></script>
 <script src="category_header.js"></script>
 <script src="category_section.js"></script>
+<script src="final_exam_config.js"></script>
 <script src="course_detail.js"></script>
 <script src="grade_progress.js"></script>
 <script src="grade_status.js"></script>
