--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
-<header class="title">
-  <h1>
-    <a href="siddhartha/jungle/" class="title-link">
-      Dou Shou Qi by Siddhartha Biswas
-    </a>
-  </h1>
-</header>
-
-<style>
-.title {
-  text-align: center;
-}
-
-.title-link {
-  color: #ff0000;
-  font-family: Arial, sans-serif;
-  font-size: 2.5rem;
-  text-decoration: none;
-}
-
-.title-link:hover {
-  text-decoration: underline;
-}
-</style>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=siddhartha/jungle/">
+    <style>
+        .title {
+            text-align: center;
+        }
+        .title-link {
+            color: #ff0000;
+            font-family: Arial, sans-serif;
+            font-size: 2.5rem;
+            text-decoration: none;
+        }
+        .title-link:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header class="title">
+        <h1>
+            <a href="siddhartha/jungle/" class="title-link">
+                Dou Shou Qi by Siddhartha Biswas
+            </a>
+        </h1>
+    </header>
+    <p>If you are not redirected automatically, <a href="siddhartha/jungle/">click here</a>.</p>
+</body>
+</html>
