Refactor: Split GameBoard component into GameBoardContainer and GameBoardRenderer

--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -20,7 +20,8 @@
 <script src="home_menu.js"></script>
 <script src="board_renderer.js"></script>
 <script src="debug_overlay.js"></script>
-<script src="game_board.js"></script>
+<script src="game_board_renderer.js"></script>
+<script src="game_board_container.js"></script>
 <script src="navigation_manager.js"></script>
 <script src="victory_screen.js"></script>
 <script src="game_manager.js"></script>
