--- a/siddhartha/grades/index.html
+++ b/siddhartha/grades/index.html
@@ -19,6 +19,7 @@
 <script src="grade_info.js"></script>
 <script src="grade_calculations.js"></script>
 <script src="utils.js"></script>
+<script src="dropped_assignments_config.js"></script>
 <script src="assignment_row.js"></script>
 <script src="hypothetical_assignment_row.js"></script>
 <script src="category_header.js"></script>
