--- a/rohan/index.html
+++ b/rohan/index.html
@@ -44,8 +44,8 @@
 <body>
     <h1>Rohan's Projects</h1>
     <div class="grid-container">
-        <a href="exploration/">
-            <img src="exploration.jpg" alt="Exploration">
+        <a href="colonies/">
+            <img src="exploration.jpg" alt="Colonies">
         </a>
         <a href="match/">
             <img src="match.jpg" alt="Match">
