--- a/siddhartha/progressive/index.html
+++ b/siddhartha/progressive/index.html
@@ -140,6 +140,14 @@
             color: white;
             margin-top: 20px;
         }
+
+        #stimulus {
+            background-color: #f8f9fa;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-left: 4px solid #2196F3;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -160,6 +168,7 @@
             </div>
 
             <div class="question">
+                <div id="stimulus"></div>
                 <h2 id="question-text"></h2>
             </div>
 
@@ -225,6 +234,7 @@
                     
                     for (let element of questionElements) {
                         const question = {
+                            stimulus: element.getElementsByTagName('stimulus')[0].textContent,
                             prompt: element.getElementsByTagName('prompt')[0].textContent,
                             options: Array.from(element.getElementsByTagName('option')).map(opt => ({
                                 letter: opt.getAttribute('letter'),
@@ -248,6 +258,7 @@
 
             displayQuestion() {
                 const question = this.questions[this.currentQuestionIndex];
+                document.getElementById('stimulus').textContent = question.stimulus;
                 this.questionTextElement.textContent = question.prompt;
                 this.optionsContainer.innerHTML = '';
 
