--- a/siddhartha/donaldduck/index.html
+++ b/siddhartha/donaldduck/index.html
@@ -20,6 +20,15 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
+        .rand-quote {
+            font-style: italic;
+            color: #666;
+            margin-bottom: 20px;
+            padding: 10px;
+            border-left: 3px solid #2196F3;
+            background-color: #f8f9fa;
+        }
+
         .progress-bar {
             width: 100%;
             height: 20px;
@@ -144,6 +153,7 @@
 </head>
 <body>
     <div class="quiz-container">
+        <div class="rand-quote" id="rand-quote"></div>
         <div class="progress-bar">
             <div class="progress" style="width: 0%"></div>
         </div>
@@ -181,6 +191,23 @@
     </div>
 
     <script>
+        const randQuotes = [
+            "The question isn't who is going to let me; it's who is going to stop me.",
+            "Do not let your fire go out, spark by irreplaceable spark.",
+            "The smallest minority on earth is the individual.",
+            "Government 'help' to business is just as disastrous as government persecution.",
+            "Run for your life from any man who tells you that money is evil.",
+            "The man who lets a leader prescribe his course is a wreck being towed to the scrap heap.",
+            "Evil requires the sanction of the victim.",
+            "Money is only a tool. It will take you wherever you wish, but it will not replace you as the driver.",
+            "The purpose of morality is to teach you, not to suffer and die, but to enjoy yourself and live.",
+            "Individual rights are not subject to a public vote.",
+            "A government is the most dangerous threat to man's rights.",
+            "Civilization is the progress toward a society of privacy.",
+            "The only power any government has is the power to crack down on criminals.",
+            "When you see corruption being rewarded, you know that society is doomed."
+        ];
+
         class Quiz {
             constructor() {
                 this.questions = [];
@@ -204,6 +231,7 @@
                 this.quizCompleteElement = document.getElementById('quiz-complete');
                 this.finalScoreElement = document.getElementById('final-score');
                 this.restartButton = document.getElementById('restart-btn');
+                this.quoteElement = document.getElementById('rand-quote');
 
                 // Event listeners
                 this.submitButton.addEventListener('click', () => this.submitAnswer());
@@ -212,6 +240,12 @@
 
                 // Load questions
                 this.loadQuestions();
+                this.updateQuote();
+            }
+
+            updateQuote() {
+                const randomIndex = Math.floor(Math.random() * randQuotes.length);
+                this.quoteElement.textContent = randQuotes[randomIndex];
             }
 
             shuffleArray(array) {
@@ -259,11 +293,9 @@
                 this.questionTextElement.textContent = question.prompt;
                 this.optionsContainer.innerHTML = '';
 
-                // Create a copy of options to shuffle
                 const shuffledOptions = [...question.options];
                 this.shuffleArray(shuffledOptions);
 
-                // Display options with consistent a,b,c,d labels
                 const displayLetters = ['a', 'b', 'c', 'd'];
                 shuffledOptions.forEach((option, index) => {
                     const optionElement = document.createElement('div');
@@ -276,6 +308,7 @@
                 });
 
                 this.updateProgress();
+                this.updateQuote();
             }
 
             selectOption(optionElement) {
