--- a/rohan/run/canvas.html
+++ b/rohan/run/canvas.html
@@ -22,6 +22,7 @@
     <script>
 		px = 1
 		py = 1
+		SIZE = 5
 		
         // Get the canvas element and its context
         const canvas = document.getElementById('myCanvas');
