--- a/rohan/run/canvas.html
+++ b/rohan/run/canvas.html
@@ -22,7 +22,8 @@
     <script>
 		px = 1
 		py = 1
-		SIZE = 5
+		SIZE = 20
+		OBSTACLES = [[2,1],[2,2]]
 		
         // Get the canvas element and its context
         const canvas = document.getElementById('myCanvas');
@@ -35,7 +36,7 @@
 
 		function drawBox(color, x, y) {
 			ctx.fillStyle = color;
-			ctx.fillRect(y*180+5,x*180+5,170,170)
+			ctx.fillRect(y*900/SIZE+5,x*900/SIZE+5,900/SIZE-10,900/SIZE-10)
 		}
 
         function drawBoxes() {
@@ -43,14 +44,16 @@
             ctx.fillStyle = white();
 			ctx.fillRect(0,0,900,900)
 
-			for (x = 0; x < 5; x++) {
-				for (y = 0; y < 5; y++) {
-					if ((x>0) && (x<4) && (y>0) && (y<4)) {
+			for (x = 0; x < SIZE; x++) {
+				for (y = 0; y < SIZE; y++) {
+					if ((x>0) && (x<SIZE-1) && (y>0) && (y<SIZE-1)) {
 						continue;
 					}
 					drawBox(blue(),x,y)
 				}
 			}
+			
+			
 			
 			drawBox(yellow(),px,py)
 	    }
@@ -87,7 +90,7 @@
 					px = px - 1
 				}	
 		    } else if (event.key === 'ArrowDown') {
-				if (px != 3) {
+				if (px != SIZE - 2) {
 					px = px + 1
 				}
 		    } else if (event.key === 'ArrowLeft') {
@@ -95,7 +98,7 @@
 					py = py - 1
 				}
 		    } else if (event.key === 'ArrowRight') {
-				if (py != 3) {
+				if (py != SIZE - 2) {
 					py = py + 1
 				}
 		    }
