--- a/siddhartha/jungle/index.html
+++ b/siddhartha/jungle/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script src="react/react.development.js"></script>
+<script src="react/react-dom.development.js"></script>
 <script src="board_constants.js"></script>
 <script src="ui_constants.js"></script>
 <script src="game_setup.js"></script>
